Add TcpLineBuffer support for netstream mode in atari